syntax = "proto3";

option go_package = "services/proto";

import "google/protobuf/timestamp.proto";
import "services/proto/general.proto";

// ArticleDetails holds content from a c2s request with timestamp
// converted to protobuf format.
message ArticleDetails {
  int64 author_id = 1;
  string title = 2;
  string body = 3;
  google.protobuf.Timestamp creation_datetime = 4;
  string md_body = 5;
  int64 global_id = 6;
  string summary = 7;
}

// NewForeignArticle is the message generated from a s2s call received
// by our server
message NewForeignArticle {
  string attributedTo = 1;
  string title = 2;
  string content = 3;
  string recipient = 4;
  google.protobuf.Timestamp published = 5;
  string md_body = 6;
  string id = 7;
  string summary = 8;
}

service Create {
  rpc SendCreate(ArticleDetails) returns (GeneralResponse);
  rpc ReceiveCreate(NewForeignArticle) returns (GeneralResponse);
}
