syntax = "proto3";

option go_package = "services/proto";

import "services/proto/general.proto";

message LikeDetails {
  int64 article_id = 1;
  string liker_handle = 3;
}

message ReceivedLikeDetails {
  // This is an ActivityPub style ID. E.g. http://rabble.ie/@a/123
  string liked_object = 1;

  // This is an ActivityPub style ID. E.g. http://rabble.rocks/@b
  string liker_id = 2;
}


// Service for sending and receiving server-to-server like activities.
service S2SLike {
  rpc SendLikeActivity(LikeDetails) returns (GeneralResponse);
  rpc ReceiveLikeActivity(ReceivedLikeDetails) returns (GeneralResponse);
}
